add troubleshooting section